--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "safe-mutation"]
 	path = safe-mutation
-	url = git@github.com:hashanp/safe-mutation.git
+	url = git@github.com:fendor/safe-mutation.git
 	branch = main
